@@ -32,9 +32,9 @@
  *   TestUpcallScope
  */
 
-import java.lang.foreign.Addressable;
-import java.lang.foreign.MemorySession;
-import java.lang.foreign.SegmentAllocator;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
+
 import org.testng.annotations.Test;
 
 import java.lang.invoke.MethodHandle;
@@ -52,11 +52,10 @@ public class TestUpcallScope extends TestUpcallBase {
     public void testUpcalls(int count, String fName, Ret ret, List<ParamType> paramTypes, List<StructFieldType> fields) throws Throwable {
         List<Consumer<Object>> returnChecks = new ArrayList<>();
         List<Consumer<Object[]>> argChecks = new ArrayList<>();
-        Addressable addr = findNativeOrThrow(fName);
-        try (MemorySession session = MemorySession.openConfined()) {
-            SegmentAllocator allocator = SegmentAllocator.newNativeArena(session);
-            MethodHandle mh = downcallHandle(ABI, addr, allocator, function(ret, paramTypes, fields));
-            Object[] args = makeArgs(session, ret, paramTypes, fields, returnChecks, argChecks);
+        MemorySegment addr = findNativeOrThrow(fName);
+        try (Arena arena = Arena.openConfined()) {
+            MethodHandle mh = downcallHandle(ABI, addr, arena, function(ret, paramTypes, fields));
+            Object[] args = makeArgs(arena.scope(), ret, paramTypes, fields, returnChecks, argChecks);
             Object[] callArgs = args;
             Object res = mh.invokeWithArguments(callArgs);
             argChecks.forEach(c -> c.accept(args));
